# stemfardsdk

./: README.md  install.txt  pyproject.toml
sdk/: __init__.py  analyze_matrix.py  config.py
stemfardsdk/: __init__.py  analyze_matrix.py  client.py  core.py  exceptions.py  matrix_analysis copy.py  matrix_analysis.py  matrix_operations.py
stemfardsdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
stemfardsdk/exceptions/: matrices.py
tests/: test_matrix.py
