[project]
name = "stemfard_sdk"
version = "0.1.0"
description = "Python SDK for symbolic and numerical computations in STEM"
authors = [{ name = "STEM Research", email = "sdk@stemxresearch.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "numpy >= 1.24",
    "sympy >= 1.12",
    "requests >= 2.31",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/stemxresearch/stemfardsdk"
Documentation = "https://stemxresearch.com/docs"
Source = "https://github.com/stemxresearch/stemfardsdk"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]